# UniversityApp

./: .gitignore  BUILD.md  BUILD_SUCCESS.md  CMakeLists.txt  FINAL_SETUP.md  MYSQL_WSL_READY.md  MYSQL_WSL_SETUP.md  PROJECT_STATUS.md  QUICK_START_WSL.md  README.md  WSL_SETUP.md  WSL_STATUS.md  setup_database.sh  setup_mysql_windows.sql  setup_wsl.sh
app/: main.cpp
app/AdminWindow/: AdminWindow.cpp  AdminWindow.h
app/AppMainWindow/: MainWindow.cpp  MainWindow.h
app/DAL/: AdminRepo.cpp  AdminRepo.h  AttendanceRepo.cpp  AttendanceRepo.h  CourseRepo.cpp  CourseRepo.h  DatabaseManager.cpp  DatabaseManager.h  DoctorRepo.cpp  DoctorRepo.h  EnrollmentRepo.cpp  EnrollmentRepo.h  ExamRepo.cpp  ExamRepo.h  GradeRepo.cpp  GradeRepo.h  NewsRepo.cpp  NewsRepo.h  PaymentRepo.cpp  PaymentRepo.h  StudentRepo.cpp  StudentRepo.h
app/DoctorWindow/: DoctorWindow.cpp  DoctorWindow.h
app/Login/: LoginController.cpp  LoginController.h
app/Models/: Attendance.cpp  Attendance.h  Course.cpp  Course.h  Doctor.cpp  Doctor.h  Enrollment.cpp  Enrollment.h  Exam.cpp  Exam.h  Grade.cpp  Grade.h  News.cpp  News.h  Payment.cpp  Payment.h  Student.cpp  Student.h  User.h
app/Services/: AttendanceService.cpp  AttendanceService.h  AuthService.cpp  AuthService.h  GradingService.cpp  GradingService.h  PMDService.cpp  PMDService.h
app/StudentWindow/: StudentWindow.cpp  StudentWindow.h
app/Utils/: PasswordHasher.cpp  PasswordHasher.h  Validators.cpp  Validators.h
db/: README.md  mysql_create.sql  seed_data.sql  sqlite_create.sql  sqlite_create_old.sql
